--- a/scss/iceland.css
+++ b/scss/iceland.css
@@ -18,8 +18,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   z-index: 1;
-  margin: 0 5rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
 }
 .nav__list {
   display: flex;
@@ -57,6 +61,7 @@
   font-size: 1.1rem;
   color: #335576;
   padding: 0;
+  margin-left: 6rem;
 }
 .nav__branding-text:hover {
   color: #db7a4e;
