--- a/scss/destinations.css
+++ b/scss/destinations.css
@@ -39,18 +39,15 @@
   color: #000;
   font-size: 0.85rem;
 }
-.nav__link--active {
-  color: #db7a4e;
-}
 .nav__link--active:after {
   content: "";
   display: block;
   margin: 0 auto;
   width: 100%;
   padding-top: 0.5rem;
-  border-bottom: 2px solid #db7a4e;
+  border-bottom: 2.5px solid #db7a4e;
 }
-.nav__link:hover {
+.nav:hover {
   color: #db7a4e;
 }
 .nav__branding-link {
@@ -88,7 +85,7 @@
   width: 100%;
 }
 .contact__title {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   margin-bottom: 1.9rem;
 }
 .contact__sub-text {
@@ -117,7 +114,7 @@
   flex-direction: column;
 }
 .hours__title {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 .hours__sub-text {
   font-size: 0.6rem;
@@ -140,12 +137,12 @@
   margin-right: 30px;
 }
 .social__title {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   margin-bottom: 2.7rem;
 }
 
 .destination {
-  height: 650px;
+  height: 40.625rem;
   background-size: cover;
   background-position: center;
 }
@@ -166,9 +163,10 @@
 }
 .destination__title-container {
   width: 100%;
+  margin-top: 30px;
 }
 .destination__title {
-  font-size: 3.75rem;
+  font-size: 3.8rem;
   margin-right: 68vw;
   color: #fff;
 }
