--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,112 +1,111 @@
-@use './partials/_global.scss' as *;
-
+@use "./partials/_global.scss" as *;
 
 .hero {
+  display: flex;
+  background-color: $bg-accent;
+  height: 510px;
+  &__container {
+    margin: 6rem;
     display: flex;
-    background-color: $bg-accent;
-    &__container {
-        margin: 6rem;
-        display: flex;
-        justify-content: space-between;
-    }
-    &__copy {
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-    }
-    &__title {
-        font-size: $fs-xl;
-    }
-    &__text {
-        font-size: $fs-sm;
-        line-height: 1.5;
-        margin-bottom: 2rem;
-    }
-    &__graphics {
-        width: 40%;
-    }
-    &__image {
-        width: 100%;  
-    }
+    justify-content: space-between;
+  }
+  &__copy {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-top: 1rem;
+  }
+  &__title {
+    font-size: $fs-xl;
+    margin-bottom: 20px;
+  }
+  &__text {
+    font-size: $fs-sm;
+    line-height: 1.5;
+    margin-bottom: 2rem;
+    margin-top: 0;
+  }
+  &__graphics {
+    width: 40%;
+  }
+  &__image {
+    width: 100%;
+  }
 }
 
 .button {
-    background-color: $accent;
-    padding: 0.5rem 2.5rem;
-    border:none;
-    border-radius: 20px;
-    color: rgba(255,255,255,.9);
-    letter-spacing: 0.03rem;
-    font-size: $fs-sm-med;      
-    &:hover {
-        cursor: pointer;
-        background-color: $main;
-    }
-}   
+  background-color: $accent;
+  padding: 0.5rem 2.5rem;
+  border: none;
+  border-radius: 20px;
+  color: rgba(255, 255, 255, 0.9);
+  letter-spacing: 0.03rem;
+  font-size: $fs-sm-med;
+  &:hover {
+    cursor: pointer;
+    background-color: $main;
+  }
+}
 
 .recommendations {
-    &__container { 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 2rem 3rem;
-    }
-    &__text-container {
-        width: 100%;
-    }
-    &__text {
-      font-size: $fs-med-lg;
-      margin-right: 68vw; 
-    }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2em 3rem;
+  }
+  &__text-container {
+    width: 100%;
+  }
+  &__text {
+    font-size: $fs-med-lg;
+    letter-spacing: 0.025rem;
+    margin: 0;
+  }
 }
 
 .card {
-    width: 28%;
-    border-radius: 5px;
-    border: 1px solid $med-dk;
-    box-shadow: 0 4px 4px $med-dk;
-    transition: transform 0.5s;
-    &:hover {
-        transform: scale(1.1);
-    }
-    &__group {
-        display: inline-flex;
-        justify-content: space-around;
-        align-items: center;
-        width: 80%;       
-    }
-    &__image {
-        width: 100%;
-        display: block;
-       
-    }
-    &__image-container {
-        position: relative;
-        padding: 0;
-        margin: 0;
-    }
-    &__title {
-        color: $bg-main;
-        font-size: $fs-med-lg;
-        font-weight: $fw-bold;
-        letter-spacing: 0.06rem;
-        position: absolute;
-        bottom: 0;
-        right: 10px;
-        margin: 25px 10px;
-    }
-    &__text-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        width: 90%;
-        margin: 0 auto;
-        margin-bottom: 30px;
-    }
+  width: 28%;
+  border-radius: 5px;
+  border: 1px solid $med-dk;
+  box-shadow: 0 4px 4px $med-dk;
+  transition: transform 0.5s;
+  &:hover {
+    transform: scale(1.1);
+  }
+  &__group {
+    display: inline-flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 80%;
+    padding: 2rem;
+  }
+  &__image {
+    width: 100%;
+    display: block;
+  }
+  &__image-container {
+    position: relative;
+    padding: 0;
+    margin: 0;
+  }
+  &__title {
+    color: $bg-main;
+    font-size: $fs-med-lg;
+    font-weight: $fw-bold;
+    letter-spacing: 0.06rem;
+    position: absolute;
+    bottom: -8px;
+    right: 10px;
+    margin: 1.3rem 0.625rem;
+  }
+  &__text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
 }
-
-
-
-
-
