--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -12,10 +12,10 @@ $fs-xs: 0.8rem;
 $fs-sm: 0.85rem; 
 $fs-sm-med: 0.9rem;
 $fs-med: 1.1rem;
-$fs-med-lg: 1.4rem; 
+$fs-med-lg: 1.3rem; 
 $fs-lg: 1.7rem; 
 $fs-xl: 2.25rem;
-$fs-xxl: 3.75rem;
+$fs-xxl: 3.8rem;
 $fs-root: 16px;
 
 :root {
@@ -33,8 +33,6 @@ $fs-root: 16px;
     max-width: 1280px;
     margin: 0;
 }
-
- 
 
 .nav {
     display: flex;
@@ -59,20 +57,18 @@ $fs-root: 16px;
         text-decoration: none;
         color: $dk;
         font-size: $fs-sm;
-        &--active {
-            color: $accent;
-        &:after {
+        &--active:after {
             content: "";
             display: block;
             margin: 0 auto;
             width: 100%;
             padding-top: 0.5rem;
-            border-bottom: 2px solid $accent;
-        }}
+            border-bottom: 2.5px solid $accent;
+        }
+    }
         &:hover {
             color: $accent;
         }
-    }
     &__branding-link {
         text-decoration: none;
 
@@ -88,6 +84,7 @@ $fs-root: 16px;
         }
     }
 }
+
 
 .footer {
     background-color: $bg-accent;
